// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAppendScript should match snapshot (OS X/Linux) 1`] = `
"#!/bin/sh
# husky-append start!
# v1.1.1 darwin
hookName=\`basename \\"$0\\"\`
appendScriptPath=\\"node_modules/husky/lib/runner/append-bin.js\\"
selfPath=\\"$(cd -P -- \\"$(dirname -- \\"$0\\")\\" && pwd -P)/$(basename -- \\"$0\\")\\"

if ! command -v node >/dev/null 2>&1; then
  echo \\"Can't find node in PATH, trying to find a node binary on your system\\"
fi

if [ -f $appendScriptPath ]; then
  node_modules/run-node/run-node $appendScriptPath $selfPath $* || exit $?
else
  echo \\"Can't find Husky user hook appending script, skipping $hookName hook\\"
fi
# husky-append end!
"
`;

exports[`getAppendScript should match snapshot (Windows) 1`] = `
"#!/bin/sh
# husky-append start!
# v1.1.1 win32
hookName=\`basename \\"$0\\"\`
appendScriptPath=\\"node_modules/husky/lib/runner/append-bin.js\\"
selfPath=\\"$(cd -P -- \\"$(dirname -- \\"$0\\")\\" && pwd -P)/$(basename -- \\"$0\\")\\"

if [ -f $appendScriptPath ]; then
  node $appendScriptPath $selfPath $* || exit $?
else
  echo \\"Can't find Husky user hook appending script, skipping $hookName hook\\"
fi
# husky-append end!
"
`;
